syntax = "proto3";
package genericsapiv1;

option go_package = "/genericsapiv1;genericsapiv1";

import "google/protobuf/timestamp.proto";

service FooService {
  rpc Read (ReadRequest) returns (ReadFooReply);
}

service BarService {
  rpc Read (ReadRequest) returns (ReadBarReply);
}

message Foo {
  int64 id = 1;
  string name = 2;
  int64 value = 3;
  string foo_specific = 4;
  google.protobuf.Timestamp ts = 5;
}

message Bar {
  int64 id = 1;
  string name = 2;
  int64 value = 3;
  string bar_specific = 4;
  string bar_another_specific = 5;
  google.protobuf.Timestamp ts = 6;
}

message Filter {
  string column_name = 1;
  string string_value = 2;
}

message ReadRequest {
  repeated Filter filters = 2;
}

message ReadFooReply {
  repeated Foo foos = 1;
}

message ReadBarReply {
  repeated Bar bars = 1;
}
